--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,10 +10,13 @@ mybatis:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/itcast?serverTimezone=GMT%2B8&useSSL=FALSE&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/online_study?serverTimezone=GMT%2B8&useSSL=FALSE&allowPublicKeyRetrieval=true
     username: root
     password: 52118259541xx
     type: com.alibaba.druid.pool.DruidDataSource
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
