--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/online_study?serverTimezone=GMT%2B8&useSSL=FALSE&allowPublicKeyRetrieval=true
     username: root
-    password: 123456
+    password: meguru.523Ciallo
     type: com.alibaba.druid.pool.DruidDataSource
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
