--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  servlet:
+    multipart:
+      max-file-size: 500MB
+      max-request-size: 50MB
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
@@ -40,4 +44,5 @@ jwt:
 file:
   realPath: G:/Program Data/online-study/files/  # 文件在磁盘中的地址
   url: /files/
+  ipPort: http://127.0.0.1:10100
 
