--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,8 +22,9 @@ spring:
       matching-strategy: ANT_PATH_MATCHER
   servlet:
     multipart:
-      max-file-size: 500MB
-      max-request-size: 50MB
+      max-file-size: 5000MB
+      max-request-size: 5000MB
+      enabled: true
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
@@ -45,4 +46,5 @@ file:
   realPath: E:/desktop/后端/back-end/files/ # 文件在磁盘中的地址
   url: /files/
   ipPort: http://127.0.0.1:10100
+
 
